stageleft_macro/src/quote_impl/snapshots/capture_copy_local_block@macro_tokens.snap
---
source: stageleft_macro/src/quote_impl/mod.rs
assertion_line: 421
expression: "prettyplease :: unparse(& wrapped)"
---
fn main() {
    {
        #[allow(unexpected_cfgs, non_local_definitions, clippy::crate_in_macro_def)]
        #[cfg_attr(not(stageleft_macro), macro_export)]
        #[doc(hidden)]
        macro_rules! __stageleft_quote__parsed_string_1__1_0 {
            (
                [x__free = $x__free:expr,] [{ let _ = x__free + 2; let _ = x__free + 2;
                }]
            ) => {
                { #[allow(non_snake_case)] { let x__free = $x__free; { let _ = x__free +
                2; let _ = x__free + 2; } } }
            };
        }
        move |
            __stageleft_ctx: &_,
            __output: &mut ::stageleft::internal::QuotedOutput,
            __props: &mut _|
        {
            #[allow(unused, non_upper_case_globals, non_snake_case)]
            let x__free = ::stageleft::runtime_support::FreeVariableWithContext::uninitialized(
                &x,
                __stageleft_ctx,
            );
            if true {
                __output
                    .captures
                    .push(::stageleft::internal::Capture {
                        ident: "x__free",
                        tokens: ::stageleft::runtime_support::FreeVariableWithContext::to_tokens(
                            x,
                            __stageleft_ctx,
                        ),
                    });
                __output.module_path = module_path!();
                __output.crate_name = option_env!("STAGELEFT_FINAL_CRATE_NAME")
                    .unwrap_or(env!("CARGO_PKG_NAME"));
                __output.pkg_name = env!("CARGO_PKG_NAME");
                __output.tokens = "{ let _ = x__free + 2 ; let _ = x__free + 2 ; }";
                __output.macro_name = Some("__stageleft_quote__parsed_string_1__1_0");
                __output.relative_paths = &[];
                *__props = Some(stageleft::properties::Property::make_root(__props));
                ::core::panic!("stageleft: q!() closure completed");
            }
            #[allow(unreachable_code, unused_qualifications)]
            {
                #[allow(unused, non_upper_case_globals, non_snake_case)]
                let x__free = x__free();
                __stageleft_quote__parsed_string_1__1_0!(
                    [x__free = x__free,] [{ let _ = x__free + 2; let _ = x__free + 2; }]
                )
            }
        }
    }
}
