stageleft_macro/src/quote_impl/snapshots/prelude_enum_variants@macro_tokens-3.snap
---
source: stageleft_macro/src/quote_impl/mod.rs
assertion_line: 493
expression: "prettyplease :: unparse(& wrapped)"
---
fn main() {
    {
        #[allow(unexpected_cfgs, non_local_definitions, clippy::crate_in_macro_def)]
        #[cfg_attr(not(stageleft_macro), macro_export)]
        #[doc(hidden)]
        macro_rules! __stageleft_quote__parsed_string_11__1_0 {
            ([] [Ok(1)]) => {
                { #[allow(non_snake_case)] { Ok(1) } }
            };
        }
        move |
            __stageleft_ctx: &_,
            __output: &mut ::stageleft::internal::QuotedOutput,
            __props: &mut _|
        {
            if true {
                __output.module_path = module_path!();
                __output.crate_name = option_env!("STAGELEFT_FINAL_CRATE_NAME")
                    .unwrap_or(env!("CARGO_PKG_NAME"));
                __output.pkg_name = env!("CARGO_PKG_NAME");
                __output.tokens = "Ok (1)";
                __output.macro_name = Some("__stageleft_quote__parsed_string_11__1_0");
                __output.relative_paths = &[];
                *__props = Some(stageleft::properties::Property::make_root(__props));
                ::core::panic!("stageleft: q!() closure completed");
            }
            #[allow(unreachable_code, unused_qualifications)]
            { __stageleft_quote__parsed_string_11__1_0!([] [Ok(1)]) }
        }
    }
}
